--- a/MongolzMVC/src/main/resources/messages.properties
+++ b/MongolzMVC/src/main/resources/messages.properties
@@ -1,1 +1,4 @@
 AbstractUserDetailsAuthenticationProvider.badCredentials= The username or password you entered is incorrect.
+transaction.form.toAccount.label = To Account
+transaction.form.amount.label = Transaction Amount  
+transaction.form.description.label = Transaction Description 
