--- a/MongolzMVC/src/main/resources/messages.properties
+++ b/MongolzMVC/src/main/resources/messages.properties
@@ -3,3 +3,6 @@ transaction.form.toAccount.label = To Account
 transaction.form.fromAccount.label = From Account
 transaction.form.amount.label = Transaction Amount  
 transaction.form.description.label = Transaction Description 
+transaction.form.fromDate.label = From Date 
+transaction.form.toDate.label = To Date 
+transaction.form.accountNumber.label = Account Number 
